# zuul-lint

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
tests/: test_zuul_lint.py
tests/data/: zuul-config-invalid.yaml
zuul_lint/: __init__.py  __main__.py  version.py  zuul-schema.json
