[metadata]
name = zuul-lint
version = 0.0.1
description = Zuul Job Config Linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pycontribs/zuul-lint
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
project_urls =
    Source=https://github.com/pycontribs/zuul-lint
    Tracker=https://github.com/tox-dev/pycontribs/zuul-lint
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
use_scm_version = True
packages = find:
include_package_data = true
install_requires =
    pyyaml
    jsonschema
    six
    typing; python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*

[options.entry_points]
console_scripts =
    zuul-lint = zuul_lint.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false

[flake8]
# do not add excludes for files in repo
exclude = .venv/,.tox/,dist/,build/,.eggs/
format = pylint
# E203: https://github.com/python/black/issues/315
ignore = E741,W503,W504,H,E501,E203
# 88 is official black default:
max-line-length = 88
