[metadata]
name = zuul-lint
description = Zuul Job Config Linter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pycontribs/zuul-lint
author = Sorin Sbarnea
author_email = sorin.sbarnea@gmail.com
project_urls =
    Source=https://github.com/pycontribs/zuul-lint
    Tracker=https://github.com/tox-dev/pycontribs/zuul-lint
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
use_scm_version = True
packages = find:
include_package_data = true
install_requires =
    pyyaml
    jsonschema
    six
python_requires = >=3.8

[options.entry_points]
console_scripts =
    zuul-lint = zuul_lint.__main__:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
